Fix alignment

--- a/calculator.css
+++ b/calculator.css
@@ -5,11 +5,9 @@
 } 
 html, body {
   font-family: 'Orbitron', sans-serif;
-  height: 100%;
-  width: 100%;
   background-color: #DECEC7;
   font-size: 14px;
-  line-height: 1.6;
+  line-height: 1.4;
 }
 
 #calculator {
@@ -18,6 +16,7 @@ html, body {
   margin-top: 20%;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 10%;
   /*border: solid 1px #B3B5BE;*/
   padding: 10px;
   background-color: #D1D2D6;
@@ -44,7 +43,10 @@ html, body {
   width: 280px;
   height: auto;
   margin-top: 15px;
-  margin-left: 5px;
+  margin-left: 15px;
+}
+#all-input {
+ height: 20px; 
 }
 
 #result {
@@ -90,7 +92,7 @@ html, body {
 }
 
 #clear-all {
-  width: 126px
+  width: 122px;
 }
 
 #plus {
